--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/test.loader.js"></script>
+    <script src="Build/test0.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -18,9 +18,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/test.data",
-        frameworkUrl: "Build/test.framework.js",
-        codeUrl: "Build/test.wasm",
+        dataUrl: "Build/test0.data",
+        frameworkUrl: "Build/test0.framework.js",
+        codeUrl: "Build/test0.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "alpaca",
